--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ repository               : "moehocbaidi/moehocbaidi.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Ha Nguyen"
   pronouns         : "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Student at Michigan State University"
   location         : "Michigan"
   employer         : "Michigan State University"
   uri              : # URL
